# constrained-union

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml  tox.toml
.github/workflows/: check.yml
examples/: shapes.py
src/constrained_union/: __init__.py  _assert_union_implements.py  mypy_plugin.py
tests/: test_mypy_plugin.py
tests/samples/: mypy.ini  shapes_failure.py  shapes_ok.py
