[project]
name = "constrained-union"
version = "0.1.0"
description = "A mypy plugin to validate at type checking time that all variants of a union type implements a protocol"
readme = "README.md"
authors = [{ name = "Loïc Riegel", email = "loic.riegel@outlook.fr" }]
requires-python = ">=3.12"
dependencies = ["mypy >= 2.1.0, < 2.2.0"]

[dependency-groups]
dev = ["pytest>=9.1.0,<10", "prek >=0.4.5, <1", "ruff >=0.15.17, <1"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
