[project]
name = "constrained-union"
version = "0.1.0"
description = "A mypy plugin to validate at type checking time that all variants of a union type implements a protocol"
readme = "README.md"
authors = [{ name = "Loïc Riegel", email = "loic.riegel@outlook.fr" }]
requires-python = ">=3.12"
dependencies = ["mypy >= 2.1.0, < 2.2.0"]
keywords = ["type-checking", "union", "protocol", "mypy", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Mypy",
    "Topic :: Software Development :: Type Checking",
]

[dependency-groups]
dev = ["pytest>=9.1.0,<10", "prek >=0.4.5, <1", "ruff >=0.15.17, <1"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
